remove string split from ResultHelper to tweak out a touch more speed